--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table class="table">
-  <thead class="thead-dark">
+    <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
       <th scope="col">First</th>
@@ -23,19 +23,19 @@
       <th scope="row">1</th>
       <td>Mark</td>
       <td>Otto</td>
-      <td>1000</td>
+      <td id="total" class="font-monospace text-end fw-bold">1000</td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Jacob</td>
       <td>Thornton</td>
-      <td>1500</td>
+      <td id="total" class="font-monospace text-end fw-bold">1500</td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Larry</td>
       <td>the Bird</td>
-      <td>2000</td>
+      <td id="total" class="font-monospace text-end fw-bold">2000</td>
     </tr>
 	  <tr>
       <th scope="row" class="table-active"></th>
