--- a/main.html
+++ b/main.html
@@ -12,29 +12,29 @@
 	<table class="table">
     <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Amount($)</th>
+      <th scope="col" id="total">#</th>
+      <th scope="col" id="total">First</th>
+      <th scope="col" id="total">Last</th>
+      <th scope="col" id="total">Amount($)</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
+      <th scope="row" id="total">1</th>
+      <td id="total">Mark</td>
+      <td id="total">Otto</td>
       <td id="total" class="font-monospace text-end fw-bold">1000</td>
     </tr>
     <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
+      <th scope="row" id="total">2</th>
+      <td id="total">Jacob</td>
+      <td id="total">Thornton</td>
       <td id="total" class="font-monospace text-end fw-bold">1500</td>
     </tr>
     <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
+      <th scope="row" id="total">3</th>
+      <td id="total">Larry</td>
+      <td id="total">the Bird</td>
       <td id="total" class="font-monospace text-end fw-bold">2000</td>
     </tr>
 	  <tr>
